# surface-sim

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: building_noisy_circuit_with_Model_object.md  creating_a_Setup_object.md
docs/yaml_examples/: biased_circ_level_noise.yaml  device_specific_noise.yaml
notebooks/rep_code/: qec_circ.ipynb  qec_experiment.ipynb
notebooks/rep_code/config/: circ_level_noise.yaml  exp_noise.yaml  rep_code_chain_layout.yaml
scripts/: download_dataset.sh  transfer_circuits.sh  transfer_dataset.sh
scripts/biased_noise_datagen/: gen_data.ipynb  gen_data.py
scripts/biased_noise_datagen/config/: biased_circ_level_noise.yaml  biased_circ_noise.yaml
scripts/circ_noise_datagen/: gen_data.ipynb  gen_data.py
scripts/circ_noise_datagen/config/: biased_circ_noise.yaml  circ_level_noise.yaml  circuit_level_noise.yaml  gen_circ_noise.yaml
scripts/circ_noise_datagen/setups/: gen_circ_noise.yaml
scripts/d3_surf_code_datagen/: circuit_check.py
scripts/d3_surf_code_datagen/schedules/: parallel_qec_round.yaml
scripts/phen_noise_datagen/: gen_data.ipynb
scripts/plot_circuit/: plot.py
scripts/plot_circuit/config/: d3_rotated_layout.yaml
scripts/surf_code_datagen/: circuit_check.py
scripts/surf_code_datagen/layouts/: rot_layout.yaml
scripts/surf_code_datagen/schedules/: parallel_qec_round.yaml  pipelined_qec_round.yaml  (+1 more)
scripts/test_datagen/: circuit_check.py
scripts/threshold_scan/: gen_data.py
surface_sim/: __init__.py
surface_sim/circuit/: circuit.py
surface_sim/circuits/: __init__.py  circuit.py  css_code.py  gates.py  library.py  operations.py  plots.py  plotter.py  rep_code.py  util.py  xzzx_code.py  xzzx_code_google.py
surface_sim/experiments/: __init__.py  circuits.py  css_code.py  library.py  rep_code.py  surface_code_css_pipelined.py  surface_code_xzzx.py  surface_code_xzzx_google.py  xzzx_code.py  xzzx_code_google.py
surface_sim/layout/: __init__.py  layout.py
surface_sim/layouts/: __init__.py  layout.py  library.py  plotter.py  util.py
surface_sim/model/: model.py
surface_sim/models/: __init__.py  library.py  model.py  util.py
surface_sim/operations/: __init__.py  library.py  operation.py
surface_sim/schedules/: __init__.py  library.py  schedule.py
surface_sim/setup/: __init__.py  setup.py
surface_sim/states/: __init__.py  state.py
surface_sim/util/: __init__.py  data_gen.py
tests/experiments/: test_surface_code_css_pipelined.py  test_surface_code_xzzx.py  test_surface_code_xzzx_google.py
tests/models/: test_library.py  test_model.py
tests/setup/: test_setup.py
tests/util/: test_data_gen.py
(+7 files in other folders)
