[tool.poetry]
name = "surface-sim"
version = "0.1.0"
description = "Suface code simulations package"
authors = ["Boris Varbanov <b.m.varbanov@gmail.com>"]
maintainers = ["Boris Varbanov <b.m.varbanov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/BorisVarbanov/surface17_simulation"
repository = "https://github.com/BorisVarbanov/surface17_simulation"
keywords = ["quantum", "error correction", "surface code", "stabilizer simulation"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
sympy = "^1.10.1"
pandas = "^1.4.2"
xarray = "^0.21"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
PyYAML = "^6.0"
netCDF4 = "^1.5.8"
jupyter = "^1.0.0"
ipykernel = "^6.13.1"
jupytext = "^1.13.8"
stim = "^1.9.0"
qec-util = { git = "https://github.com/BorisVarbanov/qec-util.git", branch = "develop" }
pymatching = "^2.1.0"


[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
mypy = "^0.961"
typeguard = "^2.13.3"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
Sphinx = "^5.0.1"
sphinx-autodoc-typehints = "^1.18.3"
xdoctest = "^1.0.0"
darglint = "^1.8.1"
codecov = "^2.1.12"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
